# Week-6-Movies

./: .gitignore  README.md  app.py  database.py  ec2-user@35.177.28.204  imdb_movies.csv  import_only_csv.py  init_self  pyproject.toml  requirements.txt  schema.sql  test_api.py  test_database.py
.github/workflows/: hello_world.yml  test_and_deploy.yml
src/stern_movies_api/: app.py  database.py
src/stern_movies_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_database.py
