[build-system]
requires = ["setuptools>=42", "wheel"]  # Build-time dependencies
build-backend = "setuptools.build_meta"

[project]
name = "stern_movies_api"
version = "0.1.0"
description = "A simple api for searching imdb movies."
authors = [
    {name = "Samuel Stern"}
]
dependencies = [
    "astroid==3.3.5",
    "blinker==1.9.0",
    "click==8.1.7",
    "dill==0.3.9",
    "Flask==3.1.0",
    "iniconfig==2.0.0",
    "isort==5.13.2",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==3.0.2",
    "mccabe==0.7.0",
    "packaging==24.2",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "psycopg2-binary==2.9.10",
    "pylint==3.3.2",
    "pytest==8.3.4",
    "python-dotenv==1.0.1",
    "tomlkit==0.13.2",
    "Werkzeug==3.1.3"
]
[project.urls]
Homepage = "https://github.com/stern-sigma/Week-6-Movies"